--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/main.css">
-
+	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 </head>
 <body>
 <h1>The best of developer</h1>
@@ -15,7 +15,7 @@
 <h3>Similique voluptate nisi, possimus commodi obcaecati?</h3>
 <h4>Error vel sunt ipsum sit voluptatibus?</h4>
 <h5>Eius ad omnis fugit, blanditiis pariatur.</h5>
-
+<script src="bower/jquery/dist/jquery.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
